<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:layout_width="573px"
        android:layout_height="303px"
        android:layout_marginStart="254px"
        android:layout_marginTop="430px"
        android:background="@drawable/model">
        <ImageView
            android:id="@+id/control_scuttle"
            android:layout_width="132px"
            android:layout_height="52px"
            android:layout_marginStart="248px"
            android:layout_marginTop="7px"
            android:src="@drawable/scuttle_model"/>
        <ImageView
            android:layout_width="117px"
            android:layout_height="156px"
            android:layout_marginStart="262px"
            android:layout_marginTop="60px"
            android:src="@drawable/ladder_model"/>
    </FrameLayout>
    
    <com.avatar.newarkescape.AppTextView
        android:id="@+id/controller_language"
        android:layout_width="160px"
        android:layout_height="70px"
        android:layout_marginStart="1415px"
        android:layout_marginTop="28px"
        android:gravity="center"
        android:text="@string/language"
        android:textColor="@color/text_color"
        android:textSize="24px"
        android:background="@drawable/language"/>

    <com.avatar.newarkescape.AppTextView
        android:id="@+id/controller_reset"
        android:layout_width="275px"
        android:layout_height="73px"
        android:layout_marginStart="401px"
        android:layout_marginTop="1102px"
        android:gravity="center"
        android:text="@string/escape_reset"
        android:textColor="@color/text_color"
        android:textSize="22px"
        android:background="@drawable/window_reset"/>

    <RelativeLayout
        android:layout_width="229px"
        android:layout_height="220px"
        android:layout_marginStart="1378px"
        android:layout_marginTop="180px">
        <ImageView
            android:id="@+id/controller_co2_density_image"
            android:layout_width="229px"
            android:layout_height="207px"
            android:src="@drawable/co2_green"/>
        <ImageView
            android:id="@+id/controller_co2_density_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/co2_bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80px">
            <com.avatar.newarkescape.AppTextView
                android:id="@+id/controller_co2_density_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2000"
                android:textColor="@color/text_color"
                android:textSize="32px"
                android:tag="N"/>
            <com.avatar.newarkescape.AppTextView
                android:id="@+id/controller_co2_density_unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ppm"
                android:textColor="@color/text_color"
                android:textSize="18px"
                android:tag="N"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/controller_co2_density_bottom">
            <com.avatar.newarkescape.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CO"
                android:textSize="48px"
                android:textColor="@color/text_color"
                android:tag="N"/>
            <com.avatar.newarkescape.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textSize="24px"
                android:textColor="@color/text_color"
                android:tag="N"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="573px"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="254px"
        android:layout_marginTop="200px">
        <LinearLayout
            android:id="@+id/controller_prompt_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

        </LinearLayout>
        <LinearLayout
            android:id="@+id/controller_warning_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

        </LinearLayout>
    </LinearLayout>

    <com.avatar.newarkescape.AppTextView
        android:layout_width="500px"
        android:layout_height="50px"
        android:layout_marginLeft="1246px"
        android:layout_marginTop="564px"
        android:gravity="center"
        android:text="@string/ladder"
        android:textColor="@color/text_color"
        android:textSize="28px"
        android:tag="S"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="1256px"
        android:layout_marginTop="635px">
        <com.avatar.newarkescape.AppTextView
            android:id="@+id/controller_up"
            android:layout_width="187px"
            android:layout_height="82px"
            android:gravity="center"
            android:text="@string/up"
            android:textColor="@color/text_color"
            android:textSize="24px"
            android:background="@drawable/up"/>
        <ImageView
            android:id="@+id/controller_ladder_icon"
            android:layout_width="48px"
            android:layout_height="60px"
            android:layout_marginStart="28px"
            android:src="@drawable/ladder_open_icon"
            android:layout_gravity="center_vertical"/>
        <com.avatar.newarkescape.AppTextView
            android:id="@+id/controller_down"
            android:layout_width="187px"
            android:layout_height="82px"
            android:gravity="center"
            android:layout_marginStart="28px"
            android:text="@string/down"
            android:textColor="@color/text_color"
            android:textSize="24px"
            android:background="@drawable/down"/>
    </LinearLayout>


    <com.avatar.newarkescape.AppTextView
        android:layout_width="500px"
        android:layout_height="50px"
        android:layout_marginLeft="1246px"
        android:layout_marginTop="820px"
        android:gravity="center"
        android:text="@string/escape"
        android:textColor="@color/text_color"
        android:textSize="28px"
        android:tag="S"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="1256px"
        android:layout_marginTop="890px">
        <com.avatar.newarkescape.AppTextView
            android:id="@+id/controller_scuttle"
            android:layout_width="164px"
            android:layout_height="84px"
            android:gravity="center"
            android:text="@string/scuttle"
            android:textColor="@color/text_color"
            android:textSize="24px"
            android:background="@drawable/scuttle"/>
        <com.avatar.newarkescape.AppTextView
            android:id="@+id/controller_escape"
            android:layout_width="158px"
            android:layout_height="84px"
            android:gravity="center"
            android:layout_marginStart="-8px"
            android:text="@string/way_out"
            android:textColor="@color/text_color"
            android:textSize="24px"
            android:background="@drawable/escape"/>
        <com.avatar.newarkescape.AppTextView
            android:id="@+id/controller_escape_close"
            android:layout_width="164px"
            android:layout_height="84px"
            android:gravity="center"
            android:layout_marginStart="-8px"
            android:text="@string/close"
            android:textColor="@color/text_color"
            android:textSize="24px"
            android:background="@drawable/close"/>
    </LinearLayout>

</RelativeLayout>